kotlin/programming-kotlin_code/functions/output/defaultrighterror.output
defaultrighterror.kts:1:31: error: parameter 'name' is uninitialized here
fun greet(msg: String = "Hi ${name.length}", name: String): String = "$msg $name"
                              ^
